--- a/assets/scss/layout/_grid.scss
+++ b/assets/scss/layout/_grid.scss
@@ -9,6 +9,7 @@
 .wrapper {
   margin: auto;
   @include rem(max-width, $maxwidth);
+  width: 100%;
   @include rem(padding, 0 $gap-fixed);
   position: relative;
   @extend %clearfix;
@@ -27,36 +28,26 @@
 }
 .col__half {
   @include col(1/2);
-  @include bp(md) {
-    @include stack();
-    @include rem(margin-bottom, $gap-fixed-sm);
-  }
 }
 .col__one-third {
   @include col(1/3);
-  @include bp(md) {
-    @include stack();
-    @include rem(margin-bottom, $gap-fixed-sm);
-  }
 }
 .col__two-thirds {
   @include col(2/3);
-  @include bp(md) {
-    @include stack();
-    @include rem(margin-bottom, $gap-fixed-sm);
-  }
 }
 .col__one-fourth {
   @include col(1/4);
-  @include bp(md) {
-    @include stack();
-    @include rem(margin-bottom, $gap-fixed-sm);
-  }
 }
-.col__threefourths {
+.col__three-fourths {
   @include col(3/4);
+}
+.stack-cols--md {
   @include bp(md) {
-    @include stack();
-    @include rem(margin-bottom, $gap-fixed-sm);
+    > * {
+      @include stack();
+    }
+    > *:not(:last-child) {
+      @include rem(margin-bottom, $spacing-fixed-sm);
+    }
   }
 }
