--- a/assets/scss/components/_forms.scss
+++ b/assets/scss/components/_forms.scss
@@ -1,265 +1,307 @@
 
-/* ==========================================================================
-   Forms
-   ========================================================================== */
+// Forms
 
-form {
-  display: block;
-  @include rem(margin, 0 0 $gap-fixed 0);
-}
-fieldset {
-  border: 0;
-  @include rem(margin, 0 -6px);
-  padding: 0;
-}
-fieldset.form-step {
-  margin: 0;  
-}
-.step-navigation .step-buttons {
-  padding: 0;
-}
-input[type="text"], input[type="password"], input[type="date"], input[type="datetime"], input[type="email"], input[type="number"], input[type="search"], input[type="tel"], input[type="time"], input[type="url"], textarea {
+@mixin input-styles {
+  @include rem(font-size, 16px);
+  @include rem(line-height, 23px);
+  @include rem(padding, 6px);
+  @include border-radius(0);
+  @include box-shadow(none);
   background: $offsetcolor;
   border: 1px solid $offsetcolor-verystrong;
   color: $textcolor;
-  @extend %primaryfont;
-  @include rem(font-size, 16px);
-  @include rem(line-height, 23px);
+  font-family: $primary-font;
   height: auto;
   margin: 0;
-  @include rem(padding, 6px);
   outline: none;
-  @include border-radius(0);
-  @include box-shadow(none);
 }
-select {
-  border: 1px solid $offsetcolor-verystrong;
-  @include rem(font-size, 14px);
-  @include rem(line-height, 21px);
-  @include rem(height, 34px);
-  -webkit-appearance: menulist-button;
-}
-select[multiple] {
-  height: auto;
-}
-input.text:focus,
-textarea:focus {
-  background: #fff;
-  border: 1px solid #555;
+
+@mixin input-focus-styles {
+  background: $white;
+  border: 1px solid $darkcolor;
   outline: 0 none;
 }
-textarea, .textarea {
-  display: block;
-  width: 100%;
-  @include bp(md) {
-    width: 100%;
-  }
-}
-input.text { width: 100%; }
-.text, .email {
-  width: 50%;
-  @include bp(md) {
-    width: 100%;
-  }
-}
-.literal {
-  width: 100%;
-}
-#Spam, .optionset, .checkboxset {
+
+@mixin label-styles {
+  @include rem(font-size, 18px);
+  @include rem(line-height, 25px);
+  @include rem(padding, 0 0 $gap-fixed-xs 0);
   clear: both;
+  color: $textcolor-strong;
+  font-family: $primary-font;
+  font-weight: 700;
+  margin: 0;
+}
+
+form {
+  @include rem(margin, 0 0 $gap-fixed 0);
   display: block;
+
+  label {
+    &.left {
+      @include label-styles;
+
+      small {
+        @include rem(font-size, 14px);
+        @include rem(line-height, 21px);
+        font-weight: 400;
+      }
+    }
+  }
+
+  legend {
+    &.left {
+      @include label-styles;
+    }
+  }
+
+  ul,
+  ol {
+    @include rem(font-size, 16px);
+    @include rem(line-height, 22px);
+    @include rem(padding, 0 0 $gap-fixed-sm $gap-fixed);
+    margin: 0;
+
+    li {
+      @include rem(margin-bottom, 5px);
+
+      &:last-child {
+        margin-bottom: 0;
+      }
+
+      &.even {
+        background: none;
+      }
+    }
+  }
+
+  h2,
+  .FormHeading {
+    @include rem(font-size, 22px);
+    @include rem(line-height, 29px);
+    @include rem(margin, $gap-fixed-xs 0 $gap-fixed-sm);
+    @include rem(padding, $gap-fixed-xs 0);
+    border-bottom: 1px solid $offsetcolor;
+    border-top: 1px solid $offsetcolor;
+    clear: both;
+    width: 100%;
+  }
 }
-.optionset, .checkboxset {
+
+fieldset {
+  @include rem(margin, 0 -6px);
+  border: 0;
+  padding: 0;
+
+  &.form-step {
+    margin: 0;
+  }
+}
+
+.step-navigation {
+  .step-buttons {
+    padding: 0;
+  }
+}
+
+input {
+  @include input-styles;
   width: 100%;
+
+  &:focus {
+    @include input-focus-styles;
+  }
 }
+
+textarea {
+  @include input-styles;
+
+  &:focus {
+    @include input-focus-styles;
+  }
+
+  .textarea {
+    display: block;
+    width: 100%;
+  }
+}
+
+select {
+  @include rem(font-size, 14px);
+  @include rem(line-height, 21px);
+  @include rem(max-width, 540px);
+  @include rem(height, 34px);
+  -webkit-appearance: menulist-button;
+  border: 1px solid $offsetcolor-verystrong;
+  width: auto;
+
+  &[multiple] {
+    height: auto;
+  }
+}
+
 .field {
   @include rem(margin, 0 -2px $gap-fixed-sm -2px);
   @include rem(padding, 0 7.5px);
-  display: inline-block;
-  vertical-align: bottom;
-  font-size: 0;
   @include bp(md) {
     margin-right: 0;
   }
-}
-.field.checkbox {
-  input.checkbox {
-    float: left;
-    @include rem(margin, 6px 6px 0 0);
+  display: inline-block;
+  font-size: 0;
+  vertical-align: bottom;
+
+  &.text,
+  &.email {
+    @include bp(md) {
+      width: 100%;
+    }
+    width: 50%;
   }
-  label.right {
-    float: left;
+
+  &.literal {
+    width: 100%;
+  }
+
+  &.checkbox {
+    input {
+      &.checkbox {
+        @include rem(margin, 6px 6px 0 0);
+        float: left;
+      }
+    }
+
+    label {
+      &.right {
+        float: left;
+      }
+    }
+  }
+
+  &.mathspamprotector {
+    display: block;
+    width: 100%;
+
+    input {
+      &.mathspamprotector {
+        @include rem(width, 100px);
+      }
+    }
   }
 }
-.field.mathspamprotector {
+
+.optionset,
+.checkboxset {
+  @include rem(padding, 0 $gap-fixed-xs $gap-fixed-sm $gap-fixed-xs);
+  clear: both;
   display: block;
   width: 100%;
-  input.mathspamprotector {
-    @include rem(width, 100px);
+
+  li {
+    list-style: none;
+  }
+
+  input {
+    @include rem(margin, 4px $gap-fixed-xs 0 0);
+    border: 0;
+    display: block;
+    float: left;
+    padding: 0;
   }
 }
-form label.left, legend.left {
-  color: $textcolor-strong;
-  @extend %primaryfont;
-  @include rem(font-size, 18px);
-  @include rem(line-height, 25px);
-  font-weight: 700;
-  margin: 0; 
-  @include rem(padding, 0 0 $gap-fixed-xs 0);
-  clear: both;
-}
-form label.left small {
-  @include rem(font-size, 14px);
-  @include rem(line-height, 21px);
-  font-weight: 400;
-}
-.middleColumn { 
+
+.middleColumn {
   clear: left;
   position: relative;
   width: auto;
 }
-.editable-area ul.checkboxsetfield, .editable-area ul.optionset {
-  margin: 0;
-  padding: 0;
-}
-form ul, form ol {
-  @include rem(font-size, 16px);
-  @include rem(line-height, 22px);
-  margin: 0;
-  @include rem(padding, 0 0 $gap-fixed-sm $gap-fixed);
-  li { @include rem(margin-bottom, 5px); }
-  li:last-child { margin-bottom: 0; }
-}
-form ul.optionset, form ul.checkboxset {
-  @include rem(padding, 0 $gap-fixed-xs $gap-fixed-sm $gap-fixed-xs);
-  li {
-    list-style: none;
+
+.editable-area {
+  .checkboxsetfield,
+  .optionset {
+    margin: 0;
+    padding: 0;
   }
 }
-form li.even { background: none; }
-.optionset input, .checkboxsetfield input { 
-  border: 0;
-  display: block;
-  float: left;  
-  @include rem(margin, 4px $gap-fixed-xs 0 0);
-  padding: 0;
-}
-div.tab .field .middleColumn { clear: none !important; margin: 0 !important; width: auto; }
-select { 
-  @include rem(max-width, 540px);
-  width: auto;
-}
-input:focus span,
-textarea:focus span { border: 3px solid #000; }
-input.action:hover,
-input.action:focus { cursor: pointer; }
-label.right {
-  @include rem(padding, 0 0 5px 0);
-  margin: 0;
-  text-align: left;
-}
-.required label.left:after, .requiredField label.left:after, .mathspamprotector label.left:after {
-  content:" *";
-  color: $alertcolor;
-  font-weight: 400;
-}
-#ContactForm_ContactForm span.required {
-  color: $alertcolor;
-}
-#Form_Form span.required, p.message.bad {
-  background: $alertcolor-dark;
-  color: #fff;
-  @include rem(padding, $gap-fixed-xs $gap-fixed-sm);
-  width: 100%;
-  font-weight: 700;
-  @include rem(font-size, 16px);
-  @include rem(line-height, 22px);
-  display: block;
-  position: relative;
-  text-align: center;
-  @include rem(top, -2px);
-}
-#Form_Form span.required:before {
-  display: block;
-  content: "";
-  @include ctr(x);
-  @include rem(top, -9px);
-  @include rem(margin-left, -9px);
-  @include triangle(up, 9px, $alertcolor-dark);
-}
-#Form_Form span.message.error {
-  @include rem(margin-top, 10px);
-  color: $alertcolor-dark;
-  font-weight: 700;
-  @include rem(font-size, 16px);
-  @include rem(line-height, 22px);
-  display: block;
-}
-.success {
-  color: #fff;
-  @include rem(font-size, 18px);
-  @include rem(line-height, 23px);
-  font-weight: 700;
-  text-align: center;
-  @include rem(padding, $gap-fixed-sm);
-  background: $successcolor-dark;
-  border: 3px solid $successcolor-meddark;
-  display: block;
-  @include rem(margin, 0 0 $gap-fixed-sm 0);
+
+.tab {
+  .field {
+    .middleColumn {
+      clear: none !important;
+      margin: 0 !important;
+      width: auto;
+    }
+  }
 }
 
-
-/* ==========================================================================
-   Typography
-   ========================================================================== */
-
-form h2, .FormHeading {
-  @include rem(font-size, 22px);
-  @include rem(line-height, 29px);
-  border-bottom: 1px solid $offsetcolor;
-  border-top: 1px solid $offsetcolor;
-  clear: both;
-  @include rem(margin, $gap-fixed-xs 0 $gap-fixed-sm); 
-  @include rem(padding, $gap-fixed-xs 0);
-  width: 100%;
-}
-.login-logo {
-  @include rem(margin, 0 auto $gap-fixed-xs auto);
-}
-.form-text { color: $textcolor; }
-
-
-/* ==========================================================================
-   Login Form
-   ========================================================================== */
-
-#Remember, #MemberLoginForm_LoginForm_Remember_Holder {
-  display: none;
-}
-#ForgotPassword {
-  color: $textcolor-subtle;
-  float: left;
-  @include rem(padding, 4px 0 0 $gap-fixed-xs);
-}
-#ForgotPassword:before {
-  content: "or ";
-}
-#MemberLoginForm_LoginForm_action_dologin {
-  float: left;
-}
-#MemberLoginForm_LoginForm {
-  text-align: center;
-  label.left {
-    display: block;
+label {
+  &.right {
+    @include rem(padding, 0 0 5px 0);
+    margin: 0;
     text-align: left;
   }
 }
 
+.required,
+.requiredField,
+.mathspamprotector {
+  label {
+    &.left {
+      &:after {
+        color: $alertcolor;
+        content: ' *';
+        font-weight: 400;
+      }
+    }
+  }
+}
 
-/* ==========================================================================
-   User Forms Page
-   ========================================================================== */
+.required {
+  @include rem(padding, $gap-fixed-xs $gap-fixed-sm);
+  @include rem(font-size, 16px);
+  @include rem(line-height, 22px);
+  @include rem(top, -2px);
+  background: $alertcolor-dark;
+  color: $white;
+  display: block;
+  font-weight: 700;
+  position: relative;
+  text-align: center;
+  width: 100%;
 
-.ui-datepicker th {
-  color: #fff;
+  &:before {
+    @include ctr(x);
+    @include rem(top, -9px);
+    @include rem(margin-left, -9px);
+    @include triangle(up, 9px, $alertcolor-dark);
+    content: '';
+    display: block;
+  }
+}
+
+.message {
+  &.error {
+    @include rem(margin-top, 10px);
+    @include rem(font-size, 16px);
+    @include rem(line-height, 22px);
+    color: $alertcolor-dark;
+    display: block;
+    font-weight: 700;
+  }
+}
+
+.success {
+  @include rem(font-size, 18px);
+  @include rem(line-height, 23px);
+  @include rem(padding, $gap-fixed-sm);
+  @include rem(margin, 0 0 $gap-fixed-sm 0);
+  background: $successcolor-dark;
+  border: 3px solid $successcolor-meddark;
+  color: $white;
+  display: block;
+  font-weight: 700;
+  text-align: center;
+}
+
+.form-text {
+  color: $textcolor;
 }
