--- a/assets/scss/layout/_base.scss
+++ b/assets/scss/layout/_base.scss
@@ -1,179 +1,239 @@
 
-/* ==========================================================================
-   Base
-   ========================================================================== */
+// Base
 
+// Border Box for all
 
-/* Border Box */
+html {
+  @include box-sizing(border-box);
+}
 
-html { @include box-sizing(border-box); }
-*, *:before, *:after { @include box-sizing(inherit); }
+* {
+  @include box-sizing(inherit);
 
+  &:before,
+  &:after {
+    @include box-sizing(inherit);
+  }
+}
 
-/* Vanity Styles */ 
+// Vanity Styles
 
 ::selection {
   background: $primarycolor;
-  color: #fff;
+  color: $white;
 }
+
 ::-moz-selection {
   background: $primarycolor;
-  color: #fff;
+  color: $white;
 }
 
+// Base Lists
 
-/* Base Lists */
-
-ul, ol {
+ul,
+ol {
   @include rem(margin, 0 0 $gap-fixed $gap-fixed-lg);
   padding: 0;
+
   > li {
-    list-style-position: outside;
     @include rem(margin-bottom, 5px);
-    > ul, > ol {
+    list-style-position: outside;
+
+    > ul,
+    > ol {
       @include rem(margin-top, 10px);
     }
   }
 }
-ul > li { list-style: disc; }
-ol > li { list-style: decimal; }
 
+ul {
+  > li {
+    list-style: disc;
+  }
+}
 
-/* Base Table Styles */
+ol > {
+  li {
+    list-style: decimal;
+  }
+}
+
+// Base Table Styles
 
 table {
-  border: none;
   @include rem(margin, 0 0 $gap-fixed 0);
+  border: 0;
   width: 100%;
+
   th {
-    background: $primarycolor;
-    border-bottom: 1px solid $primarycolor_dark;
-    border-right: 1px solid $primarycolor_dark;
-    color: #fff;
-    font-weight: 700;
-    @extend %secondaryfont;
     @include rem(padding, 10px 15px);
+    background: $primarycolor;
+    border-bottom: 1px solid $primarycolor-dark;
+    border-right: 1px solid $primarycolor-dark;
+    color: $white;
+    font-family: $secondary-font;
+    font-weight: 700;
     text-align: left;
-    a { color: #fff; }
-    a:hover {
-      color: $primarycolor_verylight;
-      text-decoration: underline;
+
+    a {
+      color: $white;
+
+      &:hover {
+        color: $primarycolor-verylight;
+        text-decoration: underline;
+      }
     }
-    small { color: $primarycolor_verylight; }
+
+    small {
+      color: $primarycolor-verylight;
+    }
   }
-  tbody th {
-    background: $offsetcolor_subtle;
-    color: $textcolor;
-    border-right: none;
-    border-bottom: 1px solid $offsetcolor_strong;
+
+  tbody {
+    th {
+      background: $offsetcolor-subtle;
+      border-bottom: 1px solid $offsetcolor-strong;
+      border-right: 0;
+      color: $textcolor;
+
+      &:last-child {
+        border-right: 0;
+      }
+    }
   }
-  th:last-child { border-right: none; }
+
   tr {
     td {
+      @include rem(padding, 10px 15px);
       border-bottom: 1px solid $offsetcolor;
       color: $textcolor;
-      @include rem(padding, 10px 15px);
       vertical-align: top;
     }
+
+    &:nth-child(even) {
+      background: $offsetcolor-verysubtle;
+    }
+
+    &:nth-child(odd) {
+      background: $white;
+    }
+
+    &:last-child {
+      border-bottom: 0;
+    }
   }
-  tr:nth-child(even) { background: $offsetcolor_verysubtle; }
-  tr:nth-child(odd) { background: #fff; }
-  tr:last-child { border-bottom: none; }
-  ul { 
+
+  ul {
     @include rem(margin, 2px 0 0 0);
     padding: 0;
+
     li {
-      list-style-type: none;
       @include rem(margin, 0 0 3px 0);
+      list-style-type: none;
       padding: 0;
     }
   }
+
   tfoot {
     td {
       background: $darkcolor;
-      color: $textcolor_reversed;
+      color: $textcolor-reversed;
     }
   }
 }
 
-/* Breaks */
+// Breaks
 
 hr {
   @extend %clearfix;
   @include rem(margin, $gap-fixed 0);
-  width: 100%;
+  background: $offsetcolor;
+  border: 0;
   display: block;
   height: 1px;
-  background: $offsetcolor;
-  border: none;
+  width: 100%;
 }
 
 
-/* Embeds */
+// Embeds
 
-object, embed {
+object,
+embed {
   height: 100%;
 }
 
 
-/* Base Image Styles / SS Image Styles */
+// Base Image Styles / SS Image Styles
 
 img {
+  -ms-interpolation-mode: bicubic;
   display: block;
   height: auto;
   max-width: 100%;
-  -ms-interpolation-mode: bicubic;
+
+  &.left {
+    @include rem(margin, 0 $gap-fixed $gap-fixed 0);
+    float: left;
+  }
+
+  &.right {
+    @include rem(margin, 0 0 $gap-fixed $gap-fixed);
+    float: right;
+  }
+
+  &.leftAlone,
+  &.left-alone {
+    @include rem(margin, 0 0 $gap-fixed 0);
+    display: block;
+    float: none;
+  }
+
+  &.center {
+    @include rem(margin, 0 auto $gap-fixed auto);
+    display: block;
+  }
 }
-img.left {
-  float: left;
-  @include rem(margin, 0 $gap-fixed $gap-fixed 0);
-}
-img.right {
-  float: right;
-  @include rem(margin, 0 0 $gap-fixed $gap-fixed);
-}
-img.leftAlone, img.left-alone {
-  display: block;
-  float: none;
-  @include rem(margin, 0 0 $gap-fixed 0);
-}
-img.center {
-  display: block;
-  @include rem(margin, 0 auto $gap-fixed auto);
-}
-.captionImage img {
-  @include rem(margin-bottom, $gap-fixed-xs);
-}
-.captionImage.center {
-  margin-left: auto;
-  margin-right: auto;
-  width: 100% !important;
-}
-.captionImage.right {
-  @include rem(margin-left, $gap-fixed);
-  float: right;
-}
-.captionImage.left {
-  float: left;
-}
-.captionImage.left, .captionImage.leftAlone {
-  @include rem(margin-right, $gap-fixed);
-}
+
 .captionImage {
   @include rem(margin-bottom, $gap-fixed);
   max-width: 100%;
-}
-.caption {
-  @extend %secondaryfont;
-  text-align: left;
-  @include rem(font-size, 16px);
-  @include rem(line-height, 22px);
-  margin: 0;
-  width: 100%;
-}
-.captionImage.center .caption {
-  @include rem(margin, 0 auto);
-  text-align: center;
-  width: 90%;
+
+  img {
+    @include rem(margin-bottom, $gap-fixed-xs);
+  }
+
+  &.center {
+    margin-left: auto;
+    margin-right: auto;
+    width: 100% !important;
+
+    .caption {
+      @include rem(margin, 0 auto);
+      text-align: center;
+      width: 90%;
+    }
+  }
+
+  &.right {
+    @include rem(margin-left, $gap-fixed);
+    float: right;
+  }
+
+  &.left {
+    @include rem(margin-right, $gap-fixed);
+    float: left;
+  }
+
+  &.leftAlone {
+    @include rem(margin-right, $gap-fixed);
+  }
 }
 
+.caption {
+  @include rem(font-size, 16px);
+  @include rem(line-height, 22px);
+  font-family: $secondary-font;
+  margin: 0;
+  text-align: left;
+  width: 100%;
+}
