--- a/assets/scss/layout/_grid.scss
+++ b/assets/scss/layout/_grid.scss
@@ -1,53 +1,62 @@
 
-/* ==========================================================================
-   Grid Helpers
-   ========================================================================== */
+// Grid Helpers
 
 .row {
   @extend %clearfix;
 }
+
 .wrapper {
-  margin: auto;
-  @include rem(max-width, $maxwidth);
-  width: 100%;
-  @include rem(padding, 0 $gap-fixed);
-  position: relative;
   @extend %clearfix;
-  &--sm {
-    @include rem(max-width, $maxwidth-sm); 
-  }
-  &--lg {
-    @include rem(max-width, $maxwidth-lg); 
-  }
-  &--xl {
-    @include rem(max-width, $maxwidth-xl); 
-  }
+  @include rem(max-width, $maxwidth);
+  @include rem(padding, 0 $gap-fixed);
   @include bp(md) {
     @include rem(padding, 0 $gap-fixed-sm);
   }
+  margin: auto;
+  position: relative;
+  width: 100%;
+
+  &--sm {
+    @include rem(max-width, $maxwidth-sm);
+  }
+
+  &--lg {
+    @include rem(max-width, $maxwidth-lg);
+  }
+
+  &--xl {
+    @include rem(max-width, $maxwidth-xl);
+  }
 }
+
 .col__half {
   @include col(1/2);
 }
+
 .col__one-third {
   @include col(1/3);
 }
+
 .col__two-thirds {
   @include col(2/3);
 }
+
 .col__one-fourth {
   @include col(1/4);
 }
+
 .col__three-fourths {
   @include col(3/4);
 }
+
 .stack-cols--md {
   @include bp(md) {
     > * {
-      @include stack();
-    }
-    > *:not(:last-child) {
-      @include rem(margin-bottom, $spacing-fixed-sm);
+      @include stack;
+
+      &:not(:last-child) {
+        @include rem(margin-bottom, $spacing-fixed-sm);
+      }
     }
   }
 }
