--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,17 +1,11 @@
 
-
-/* ==========================================================================
-   Third Party Base Stuff
-   ========================================================================== */
+// Third Party Base Stuff
 
 @import 'compass';
 @import '../../components/normalize-scss/normalize';
 @import '../../components/jeet/scss/jeet/index';
 
-
-/* ==========================================================================
-   Settings / Typography / Base Stuff
-   ========================================================================== */
+// Settings / Typography / Base Stuff
 
 @import 'layout/_settings';
 @import 'layout/_base';
@@ -22,22 +16,14 @@
 @import 'layout/_grid';
 @import 'layout/_structure';
 
-
-/* ==========================================================================
-   Components
-   ========================================================================== */
+// Components
 
 @import 'components/_buttons';
 @import 'components/_forms';
 @import 'components/_pagination';
 
+// Sitewide Chrome
 
-/* ==========================================================================
-   Sitewide Chrome
-   ========================================================================== */
+// Pages
 
-
-/* ==========================================================================
-  Pages
-   ========================================================================== */
-
+@import 'components/_login-page.scss';
