--- a/assets/scss/layout/_typography.scss
+++ b/assets/scss/layout/_typography.scss
@@ -85,7 +85,7 @@ strong {
 small {
   @include rem(font-size, $base-font-size * .8);
   color: $textcolor-subtle;
-  font-family: $secondaryfont;
+  font-family: $secondary-font;
   font-style: italic;
 }
 
@@ -153,7 +153,7 @@ blockquote {
 }
 
 q {
-  font-family: $secondaryfont;
+  font-family: $secondary-font;
   font-style: italic;
   font-weight: 400;
 }
