--- a/assets/scss/layout/_typography.scss
+++ b/assets/scss/layout/_typography.scss
@@ -95,16 +95,20 @@ code {
   font-weight: 400;
 }
 
-.text__center {
+.text--center {
   text-align: center;
 }
 
-.text__right {
+.text--right {
   text-align: right;
 }
 
-.text__left {
+.text--left {
   text-align: left;
+}
+
+.text--reversed {
+  color: $white;
 }
 
 blockquote {
@@ -182,10 +186,6 @@ cite {
 
 .secondary-color {
   color: $secondarycolor;
-}
-
-.reversed {
-  color: $white;
 }
 
 .all-caps {
