--- a/assets/scss/components/_buttons.scss
+++ b/assets/scss/components/_buttons.scss
@@ -3,7 +3,7 @@
 
 .btn {
   @include rem(font-size, $base-font-size);
-  @include rem(padding, 7px 15px);
+  @include rem(padding, 20px 30px);
   @include transition-duration($transitionduration);
   border: 1px solid transparent;
   color: $textcolor;
@@ -22,6 +22,7 @@
 
     &:hover {
       background: $offsetcolor;
+      color: $textcolor;
     }
   }
 
@@ -31,6 +32,7 @@
 
     &:hover {
       background: $primarycolor-dark;
+      color: $white;
     }
   }
 
@@ -40,6 +42,7 @@
 
     &:hover {
       background: $secondarycolor-dark;
+      color: $white;
     }
   }
 
@@ -55,10 +58,20 @@
   }
 
   &--lg {
-    @include rem(font-size, $base-font-size * 1.2);
+    @include rem(font-size, $base-font-size * 1.3);
   }
 
   &--sm {
-    @include rem(font-size, $base-font-size * .8);
+    @include rem(font-size, $base-font-size * .7);
+  }
+
+  &--wide {
+    @include rem(padding-left, 100px);
+    @include rem(padding-right, 100px);
+  }
+
+  &--tall {
+    @include rem(padding-bottom, 30px);
+    @include rem(padding-top, 30px);
   }
 }
