--- a/assets/scss/components/_forms.scss
+++ b/assets/scss/components/_forms.scss
@@ -115,14 +115,10 @@ input {
 
 textarea {
   @include input-styles;
+  width: 100%;
 
   &:focus {
     @include input-focus-styles;
-  }
-
-  .textarea {
-    display: block;
-    width: 100%;
   }
 }
 
@@ -158,7 +154,8 @@ select {
     width: 50%;
   }
 
-  &.literal {
+  &.literal,
+  &.textarea {
     width: 100%;
   }
 
